--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -25,6 +25,31 @@ body{
     flex:1 1 auto;
 }
 
+.content{
+    position: relative;
+    
+    @media(max-width: 1000px){
+        border-bottom: 1px solid rgba(0,0,0,.1);
+    }
+    
+     &::before{
+        content:"";
+        position: absolute;
+        top:0;
+        right: 0;
+        width:100%;
+        height: 100%;
+        background: url('/images/bg.jpg') 105% no-repeat;
+        background-size:contain;
+         
+        @media(max-width: 1000px){
+            display: none;
+        }
+    }
+    
+}
+
+
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 auto;
@@ -33,15 +58,20 @@ body{
 
 
 .header {
+    
     &__container {
         position: relative;
-         z-index: 4;
+        z-index: 4;
     }
     
     &__top {
         display: flex;
         justify-content: space-between;
         padding:23px 0 20px;
+        
+        @media(max-width:756px){
+            padding: 5px 0 5px;
+        }
     }
     
     &__logo {
@@ -322,6 +352,13 @@ body{
         &:hover{
             background: rgba(135, 175, 241, 0.86);
         }
+        
+         @media(max-width:$md3 + px){
+            font-size: 16px;
+            color:#272793;
+            padding:10px 60px;
+            color:#fff;
+        }
     }
 }
 
@@ -358,27 +395,38 @@ body{
 
 .welcome-page {
     overflow: hidden;
-    
-    &::before{
-        content:"";
-        position: absolute;
-        top:0;
-        right: 0;
-        width:100%;
-        height: 100%;
-        background: url('/images/bg.jpg') 105% no-repeat;
-        background-size:contain;
+    position: relative;
+    height: 555px;
+ 
+    &__content{
+         max-width: 660px;
     }
     
     &__container {
-        padding-top:95px;
-        padding-bottom: 148px;
+        height: 100%;
+        
+        @media(max-width:756px){
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
     }
     
     &__info {
-        width: 660px;
         position: relative;
         z-index: 5;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        
+        @media(max-width: 1000px){
+            width: 550px;
+        }
+        
+        @media(max-width: 820px){
+            width: 420px;
+        }
     }
     
     &__text {
@@ -388,8 +436,18 @@ body{
         font-size: 39px;
         line-height: 51px;
         color: #333333;
+        
+        @media(max-width: 1000px){
+             font-size: 25px;
+        }
+        
+        @media(max-width:450px){
+            line-height: 35px;
+            font-size: 22px;
+        }
 
     }
+    
     &__subtext {
         font-family: Gilroy;
         font-style: normal;
@@ -402,19 +460,31 @@ body{
         span{
             font-weight: bold;
         }
+        
+        @media(max-width:450px){
+              font-size: 19px;
+        }
     }
     
     &__banner{
         position: absolute;
         bottom:0;
-        right: 17%;
+        right: 21%;
         
+        @media(max-width: 1160px){
+            right:11%;
+        }
+        
+        @media(max-width: 1060px){
+            right:7%;
+        }
+        
+        @media(max-width: 756px){
+            display: none;
+        }
+    
         img{
             display: block;
-            width: 100%;
-            height: 100%;
-            position: relative;
-            top:0px;
         }
     }
 }
