--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,30 @@ body {
   flex: 1 1 auto;
 }
 
+.content {
+  position: relative;
+}
+@media (max-width: 1000px) {
+  .content {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+}
+.content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: url("/images/bg.jpg") 105% no-repeat;
+  background-size: contain;
+}
+@media (max-width: 1000px) {
+  .content::before {
+    display: none;
+  }
+}
+
 ._container {
   max-width: 1180px;
   margin: 0 auto;
@@ -31,6 +55,11 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 23px 0 20px;
+}
+@media (max-width: 756px) {
+  .header__top {
+    padding: 5px 0 5px;
+  }
 }
 .header__logo {
   flex: 0 1 383px;
@@ -302,6 +331,14 @@ body {
 .button_primary:hover {
   background: rgba(135, 175, 241, 0.86);
 }
+@media (max-width: 767.98px) {
+  .button_primary {
+    font-size: 16px;
+    color: #272793;
+    padding: 10px 60px;
+    color: #fff;
+  }
+}
 
 .list-header {
   list-style: none;
@@ -336,25 +373,39 @@ body {
 
 .welcome-page {
   overflow: hidden;
+  position: relative;
+  height: 555px;
 }
-.welcome-page::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: url("/images/bg.jpg") 105% no-repeat;
-  background-size: contain;
+.welcome-page__content {
+  max-width: 660px;
 }
 .welcome-page__container {
-  padding-top: 95px;
-  padding-bottom: 148px;
+  height: 100%;
+}
+@media (max-width: 756px) {
+  .welcome-page__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
 .welcome-page__info {
-  width: 660px;
   position: relative;
   z-index: 5;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 1000px) {
+  .welcome-page__info {
+    width: 550px;
+  }
+}
+@media (max-width: 820px) {
+  .welcome-page__info {
+    width: 420px;
+  }
 }
 .welcome-page__text {
   font-family: Gilroy;
@@ -363,6 +414,17 @@ body {
   font-size: 39px;
   line-height: 51px;
   color: #333333;
+}
+@media (max-width: 1000px) {
+  .welcome-page__text {
+    font-size: 25px;
+  }
+}
+@media (max-width: 450px) {
+  .welcome-page__text {
+    line-height: 35px;
+    font-size: 22px;
+  }
 }
 .welcome-page__subtext {
   font-family: Gilroy;
@@ -376,15 +438,31 @@ body {
 .welcome-page__subtext span {
   font-weight: bold;
 }
+@media (max-width: 450px) {
+  .welcome-page__subtext {
+    font-size: 19px;
+  }
+}
 .welcome-page__banner {
   position: absolute;
   bottom: 0;
-  right: 17%;
+  right: 21%;
+}
+@media (max-width: 1160px) {
+  .welcome-page__banner {
+    right: 11%;
+  }
+}
+@media (max-width: 1060px) {
+  .welcome-page__banner {
+    right: 7%;
+  }
+}
+@media (max-width: 756px) {
+  .welcome-page__banner {
+    display: none;
+  }
 }
 .welcome-page__banner img {
   display: block;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: 0px;
 }
