--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,129 @@
+@font-face {
+  font-family: "Gilroy-Black";
+  src: url("../fonts/gilroy-black.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-black.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-black.woff2") format("woff2"), url("../fonts/gilroy-black.woff") format("woff"), url("../fonts/gilroy-black.ttf") format("truetype"), url("../fonts/gilroy-black.svg#gilroy-black") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-BlackItalic";
+  src: url("../fonts/gilroy-blackitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-blackitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-blackitalic.woff2") format("woff2"), url("../fonts/gilroy-blackitalic.woff") format("woff"), url("../fonts/gilroy-blackitalic.ttf") format("truetype"), url("../fonts/gilroy-blackitalic.svg#gilroy-blackitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-Bold";
+  src: url("../fonts/gilroy-bold.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-bold.woff2") format("woff2"), url("../fonts/gilroy-bold.woff") format("woff"), url("../fonts/gilroy-bold.ttf") format("truetype"), url("../fonts/gilroy-bold.svg#gilroy-bold") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-BoldItalic";
+  src: url("../fonts/gilroy-bolditalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-bolditalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-bolditalic.woff2") format("woff2"), url("../fonts/gilroy-bolditalic.woff") format("woff"), url("../fonts/gilroy-bolditalic.ttf") format("truetype"), url("../fonts/gilroy-bolditalic.svg#gilroy-bolditalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-ExtraBoldItalic";
+  src: url("../fonts/gilroy-extrabolditalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-extrabolditalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-extrabolditalic.woff2") format("woff2"), url("../fonts/gilroy-extrabolditalic.woff") format("woff"), url("../fonts/gilroy-extrabolditalic.ttf") format("truetype"), url("../fonts/gilroy-extrabolditalic.svg#gilroy-extrabolditalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-Heavy";
+  src: url("../fonts/gilroy-heavy.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-heavy.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-heavy.woff2") format("woff2"), url("../fonts/gilroy-heavy.woff") format("woff"), url("../fonts/gilroy-heavy.ttf") format("truetype"), url("../fonts/gilroy-heavy.svg#gilroy-heavy") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-HeavyItalic";
+  src: url("../fonts/gilroy-heavyitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-heavyitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-heavyitalic.woff2") format("woff2"), url("../fonts/gilroy-heavyitalic.woff") format("woff"), url("../fonts/gilroy-heavyitalic.ttf") format("truetype"), url("../fonts/gilroy-heavyitalic.svg#gilroy-heavyitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-LightItalic";
+  src: url("../fonts/gilroy-lightitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-lightitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-lightitalic.woff2") format("woff2"), url("../fonts/gilroy-lightitalic.woff") format("woff"), url("../fonts/gilroy-lightitalic.ttf") format("truetype"), url("../fonts/gilroy-lightitalic.svg#gilroy-lightitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-Medium";
+  src: url("../fonts/gilroy-medium.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-medium.woff2") format("woff2"), url("../fonts/gilroy-medium.woff") format("woff"), url("../fonts/gilroy-medium.ttf") format("truetype"), url("../fonts/gilroy-medium.svg#gilroy-medium") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-MediumItalic";
+  src: url("../fonts/gilroy-mediumitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-mediumitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-mediumitalic.woff2") format("woff2"), url("../fonts/gilroy-mediumitalic.woff") format("woff"), url("../fonts/gilroy-mediumitalic.ttf") format("truetype"), url("../fonts/gilroy-mediumitalic.svg#gilroy-mediumitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("../fonts/gilroy-regular.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-regular.woff2") format("woff2"), url("../fonts/gilroy-regular.woff") format("woff"), url("../fonts/gilroy-regular.ttf") format("truetype"), url("../fonts/gilroy-regular.svg#gilroy-regular") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-RegularItalic";
+  src: url("../fonts/gilroy-regularitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-regularitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-regularitalic.woff2") format("woff2"), url("../fonts/gilroy-regularitalic.woff") format("woff"), url("../fonts/gilroy-regularitalic.ttf") format("truetype"), url("../fonts/gilroy-regularitalic.svg#gilroy-regularitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-SemiBold";
+  src: url("../fonts/gilroy-semibold.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-semibold.woff2") format("woff2"), url("../fonts/gilroy-semibold.woff") format("woff"), url("../fonts/gilroy-semibold.ttf") format("truetype"), url("../fonts/gilroy-semibold.svg#gilroy-semibold") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-SemiBoldItalic";
+  src: url("../fonts/gilroy-semibolditalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-semibolditalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-semibolditalic.woff2") format("woff2"), url("../fonts/gilroy-semibolditalic.woff") format("woff"), url("../fonts/gilroy-semibolditalic.ttf") format("truetype"), url("../fonts/gilroy-semibolditalic.svg#gilroy-semibolditalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-Thin";
+  src: url("../fonts/gilroy-thin.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-thin.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-thin.woff2") format("woff2"), url("../fonts/gilroy-thin.woff") format("woff"), url("../fonts/gilroy-thin.ttf") format("truetype"), url("../fonts/gilroy-thin.svg#gilroy-thin") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-ThinItalic";
+  src: url("../fonts/gilroy-thinitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-thinitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-thinitalic.woff2") format("woff2"), url("../fonts/gilroy-thinitalic.woff") format("woff"), url("../fonts/gilroy-thinitalic.ttf") format("truetype"), url("../fonts/gilroy-thinitalic.svg#gilroy-thinitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-UltraLight";
+  src: url("../fonts/gilroy-ultralight.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-ultralight.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-ultralight.woff2") format("woff2"), url("../fonts/gilroy-ultralight.woff") format("woff"), url("../fonts/gilroy-ultralight.ttf") format("truetype"), url("../fonts/gilroy-ultralight.svg#gilroy-ultralight") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
+@font-face {
+  font-family: "Gilroy-UltraLightItalic";
+  src: url("../fonts/gilroy-ultralightitalic.eot");
+  /* IE 9 Compatibility Mode */
+  src: url("../fonts/gilroy-ultralightitalic.eot?#iefix") format("embedded-opentype"), url("../fonts/gilroy-ultralightitalic.woff2") format("woff2"), url("../fonts/gilroy-ultralightitalic.woff") format("woff"), url("../fonts/gilroy-ultralightitalic.ttf") format("truetype"), url("../fonts/gilroy-ultralightitalic.svg#gilroy-ultralightitalic") format("svg");
+  /* Chrome < 4, Legacy iOS */
+}
 a {
   text-decoration: none;
 }
@@ -465,4 +591,142 @@ body {
 }
 .welcome-page__banner img {
   display: block;
+}
+
+.document-types {
+  padding: 60px 0;
+  text-align: center;
+}
+.document-types__title {
+  font-family: Gilroy;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 46px;
+  color: #333333;
+}
+@media (max-width: 767.98px) {
+  .document-types__title {
+    font-size: 25px;
+  }
+}
+@media (max-width: 479.98px) {
+  .document-types__title {
+    font-size: 20px;
+  }
+}
+.document-types__elements {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.document-types__element {
+  flex: 0 0 23%;
+  height: 190px;
+  cursor: pointer;
+  padding: 32px 68px;
+  box-sizing: border-box;
+  transition: 0.3s background;
+  margin-bottom: 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.0677994);
+}
+@media (max-width: 1100px) {
+  .document-types__element {
+    flex: 0 0 32%;
+  }
+}
+@media (max-width: 855px) {
+  .document-types__element {
+    flex: 0 0 48%;
+  }
+}
+@media (max-width: 578px) {
+  .document-types__element {
+    flex: 0 0 100%;
+  }
+}
+.document-types__element:hover {
+  background: #FFFFFF;
+  box-shadow: 0px 7px 30px rgba(0, 0, 0, 0.1);
+}
+.document-types__img {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.document-types__img img {
+  width: 66px;
+  height: 66px;
+}
+.document-types__text {
+  font-family: Gilroy;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 19px;
+  line-height: 23px;
+  text-align: center;
+  color: #333333;
+  letter-spacing: 1px;
+}
+
+.garantee {
+  background: #F6F6F6;
+  padding: 44px 0 90px;
+}
+.garantee_items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.garantee__item {
+  flex: 0 0 16.667%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 25px;
+}
+@media (max-width: 1192px) {
+  .garantee__item {
+    flex: 0 0 30%;
+  }
+}
+@media (max-width: 991.98px) {
+  .garantee__item {
+    flex: 0 0 45%;
+  }
+}
+@media (max-width: 479.98px) {
+  .garantee__item {
+    flex: 0 0 100%;
+    margin-bottom: 45px;
+  }
+}
+.garantee__img {
+  width: 98px;
+  height: 98px;
+  background: #FFFFFF;
+  border: 1px solid #E8E8E8;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 23px;
+}
+.garantee__title {
+  font-family: Gilroy;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18.2px;
+  line-height: 27px;
+  color: #333333;
+  margin-bottom: 10px;
+}
+.garantee__text {
+  font-family: Gilroy;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
+  color: #333333;
 }
